--- a/webservice-tools/pom.xml
+++ b/webservice-tools/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>move-common</artifactId>
-        <groupId>no.difi.meldingsutveksling</groupId>
+        <artifactId>parent</artifactId>
+        <groupId>no.difi.move-common</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -20,9 +20,9 @@
             <artifactId>spring-ws-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>no.difi.meldingsutveksling</groupId>
+            <groupId>no.difi.move-common</groupId>
             <artifactId>audit</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
