--- a/move-dependencies/pom.xml
+++ b/move-dependencies/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>no.difi.move-common</groupId>
     <artifactId>move-dependencies</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <properties>
