--- a/webservice-tools/pom.xml
+++ b/webservice-tools/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>no.difi.move-common</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>webservice-tools</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <dependencies>
         <dependency>
