--- a/audit/pom.xml
+++ b/audit/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>no.difi.move-common</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>audit</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>net.logstash.logback</groupId>
