--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,23 @@
         <tag>HEAD</tag>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>DIFI MOVE</id>
+            <name>DIFI MOVE Nexus 3rd party</name>
+            <url>https://beta-meldingsutveksling.difi.no/content/repositories/thirdparty/</url>
+        </repository>
+        <repository>
+            <id>DIFI Move releases</id>
+            <name>DIFI MOVE releases on Nexus</name>
+            <url>https://beta-meldingsutveksling.difi.no/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>Jsch</id>
+            <url>http://jsch.sf.net/maven2/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -25,6 +42,8 @@
         <module>audit</module>
         <module>webservice-tools</module>
         <module>move-dependencies</module>
+        <module>security</module>
+        <module>config</module>
     </modules>
 
     <dependencyManagement>
@@ -35,9 +54,9 @@
                 <version>4.7</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.boot.version}</version>
+                <groupId>no.difi.move-common</groupId>
+                <artifactId>move-dependencies</artifactId>
+                <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
