Copied Spring cloud config/resolver from integrasjonspunkt to move-common

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>move-dependencies</module>
         <module>security</module>
         <module>config</module>
+        <module>cloud</module>
     </modules>
 
     <dependencyManagement>
