--- a/move-dependencies/pom.xml
+++ b/move-dependencies/pom.xml
@@ -130,6 +130,11 @@
                 <artifactId>security</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.8.8</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
