--- a/audit/pom.xml
+++ b/audit/pom.xml
@@ -10,10 +10,17 @@
     <artifactId>audit</artifactId>
     <version>1.0.14-SNAPSHOT</version>
     <dependencies>
+
+        <dependency>
+            <groupId>no.difi.move-common</groupId>
+            <artifactId>security</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
