--- a/move-dependencies/pom.xml
+++ b/move-dependencies/pom.xml
@@ -27,10 +27,16 @@
         <nimbus.sdk.version>5.17.2</nimbus.sdk.version>
         <nimbus.jwt.version>4.27</nimbus.jwt.version>
         <swagger.version>2.6.1</swagger.version>
+        <guava.version>23.0</guava.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
