--- a/webservice-tools/pom.xml
+++ b/webservice-tools/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>no.difi.move-common</groupId>
-        <version>1.0.28-SNAPSHOT</version>
+        <version>1.0.28-spring_boot2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>webservice-tools</artifactId>
-    <version>1.0.28-SNAPSHOT</version>
+    <version>1.0.28-spring_boot2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -23,6 +23,12 @@
             <groupId>no.difi.move-common</groupId>
             <artifactId>audit</artifactId>
             <version>${project.parent.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
