--- a/move-dependencies/pom.xml
+++ b/move-dependencies/pom.xml
@@ -23,12 +23,11 @@
         <xmlsec.version>2.1.3</xmlsec.version>
         <json-path.version>2.4.0</json-path.version>
         <activemq.version>5.15.9</activemq.version>
-        <!-- <nimbus.version>4.23</nimbus.version> -->
         <nimbus.sdk.version>6.13</nimbus.sdk.version>
         <nimbus.jwt.version>7.3</nimbus.jwt.version>
         <springfox.version>2.9.2</springfox.version>
         <swagger.version>1.5.20</swagger.version>
-        <guava.version>23.0</guava.version>
+        <guava.version>28.0-jre</guava.version>
         <jackson.version>2.9.9</jackson.version>
         <xstream.version>1.4.11</xstream.version>
         <bouncycastle.version>1.62</bouncycastle.version>
