--- a/move-dependencies/pom.xml
+++ b/move-dependencies/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>no.difi.move-common</groupId>
     <artifactId>move-dependencies</artifactId>
-    <version>1.0.28-spring_boot2-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
