--- a/security/pom.xml
+++ b/security/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>no.difi.move-common</groupId>
-        <version>1.0.28-spring_boot2-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
