--- a/move-dependencies/pom.xml
+++ b/move-dependencies/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath />
     </parent>
     <groupId>no.difi.move-common</groupId>
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <spring.cloud.version>Greenwich.SR2</spring.cloud.version>
+        <spring.cloud.version>Hoxton.SR3</spring.cloud.version>
         <logback.version>1.2.3</logback.version>
         <logback.logstash.encoder.version>4.9</logback.logstash.encoder.version>
         <virksert.version>1.0-SNAPSHOT</virksert.version>
