--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:git:https://github.com/difi/move-common</connection>
-        <developerConnection>scm:git:https://github.com/difi/move-common</developerConnection>
-        <url>https://github.com/difi/move-common</url>
+        <connection>scm:git:https://github.com/felleslosninger/efm-common</connection>
+        <developerConnection>scm:git:https://github.com/felleslosninger/efm-common</developerConnection>
+        <url>https://github.com/felleslosninger/efm-common</url>
         <tag>HEAD</tag>
     </scm>
 
