--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
 
     <repositories>
         <repository>
+            <id>MavenArtifactFeed</id>
+            <url>https://pkgs.dev.azure.com/dificloud/_packaging/MavenArtifactFeed/maven/v1</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>DIFI MOVE</id>
             <name>DIFI MOVE Nexus 3rd party</name>
             <url>https://beta-meldingsutveksling.difi.no/content/repositories/thirdparty/</url>
@@ -30,6 +40,13 @@
             <url>http://jsch.sf.net/maven2/</url>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>MavenArtifactFeed</id>
+            <url>https://pkgs.dev.azure.com/dificloud/_packaging/MavenArtifactFeed/maven/v1</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
