--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,12 @@ fabric.properties
 /audit/target/
 /config/target/
 /cloud/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
