MOVE-1900 Specified maven deploy to reflect pipeline template change where default now is maven package

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -10,6 +10,7 @@ extends:
   parameters:
     environmentRepository: git://eformidling/eformidling
     buildDockerArtifact: false
+    mavenGoals: deploy
 
 trigger:
   batch: true
