MOVE-2036 Tilpasset til utvidinger i pipeline [skip ci]

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -4,6 +4,7 @@ resources:
       type: github
       name: felleslosninger/efm-eproc-pipeline
       endpoint: felleslosninger
+      ref: development
 
 extends:
   template: build-and-deploy-template.yml@efm-eproc-pipeline
@@ -11,14 +12,12 @@ extends:
     environmentRepository: git://eformidling/eformidling
     buildDockerArtifact: false
     mavenGoals: deploy
+    jiraVersionPrefix: Common
 
 trigger:
   batch: true
   branches:
     include:
-      - development
-      - release-*
-      - hotfix-*
-      - master
+      - '*'
 
 pr: none
