MOVE-2447 Prepared pipeline and POM for deploy to Maven Central

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -13,6 +13,7 @@ extends:
     buildDockerArtifact: false
     mavenGoals: deploy
     jiraVersionPrefix: Common
+    deployOssrh: true
 
 trigger:
   batch: true
