--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>no.difi.move-common</groupId>
     <version>1.1.10-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>Move-common</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -22,7 +23,44 @@
         <tag>HEAD</tag>
     </scm>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Digdir</name>
+            <email>servicedesk@digdir.no</email>
+            <organization>Digdir</organization>
+            <organizationUrl>https://www.digdir.no</organizationUrl>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <repositories>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>MavenArtifactFeed</id>
             <url>https://pkgs.dev.azure.com/dificloud/_packaging/MavenArtifactFeed/maven/v1</url>
@@ -34,27 +72,10 @@
             </snapshots>
         </repository>
         <repository>
-            <id>DIFI MOVE</id>
-            <name>DIFI MOVE Nexus 3rd party</name>
-            <url>https://beta-meldingsutveksling.difi.no/content/repositories/thirdparty/</url>
-        </repository>
-        <repository>
-            <id>DIFI Move releases</id>
-            <name>DIFI MOVE releases on Nexus</name>
-            <url>https://beta-meldingsutveksling.difi.no/content/repositories/releases/</url>
-        </repository>
-        <repository>
             <id>Jsch</id>
             <url>http://jsch.sf.net/maven2/</url>
         </repository>
     </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>MavenArtifactFeed</id>
-            <url>https://pkgs.dev.azure.com/dificloud/_packaging/MavenArtifactFeed/maven/v1</url>
-        </repository>
-    </distributionManagement>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -272,15 +293,28 @@
 
     <profiles>
         <profile>
-            <id>sonar</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+            <id>ossrh</id>
             <properties>
-                <sonar.host.url>
-                    http://sonar-app01.difi.local:9000/
-                </sonar.host.url>
+                <dokka.skip>false</dokka.skip>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
