--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
             </dependency>
 
             <dependency>
+                <groupId>no.difi.commons</groupId>
+                <artifactId>commons-certvalidator</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+
+            <dependency>
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
                 <version>4.9</version>
