--- a/security/pom.xml
+++ b/security/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>commons-asic</artifactId>
         </dependency>
         <dependency>
+            <groupId>no.difi.commons</groupId>
+            <artifactId>commons-certvalidator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
         </dependency>
