--- a/.gitignore
+++ b/.gitignore
@@ -59,11 +59,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-/security/target/
-/webservice-tools/target/
-/audit/target/
-/config/target/
-/cloud/target/
+/**/target/
 
 ### STS ###
 .apt_generated
