MOVE-2477 Moving io classes from dpi-client to move-common:io

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
         <module>annotation</module>
         <module>domain</module>
         <module>validation</module>
+        <module>io</module>
     </modules>
 
     <dependencyManagement>
