--- a/security/pom.xml
+++ b/security/pom.xml
@@ -3,11 +3,13 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>no.difi.move-common</groupId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>security</artifactId>
+
+
 
     <dependencies>
 
