--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.cloud.version>Hoxton.SR9</spring.cloud.version>
+        <spring.cloud.version>2020.0.4</spring.cloud.version>
         <logback.version>1.2.3</logback.version>
         <mockito.version>2.28.2</mockito.version>
         <commons-lang.version>2.3</commons-lang.version>
