MOVE-2694 Legg på @LoggedProperty for ny DPI

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
         <module>validation</module>
         <module>io</module>
         <module>certvalidator</module>
+        <module>properties</module>
     </modules>
 
     <dependencyManagement>
