MOVE-2749 Full støtte for Iso6523 for organisasjonsnummer.

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,8 @@
         <module>io</module>
         <module>certvalidator</module>
         <module>properties</module>
+        <module>persistence</module>
+        <module>spring-converter</module>
     </modules>
 
     <dependencyManagement>
