--- a/config/pom.xml
+++ b/config/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>no.difi.move-common</groupId>
         <artifactId>parent</artifactId>
-        <version>1.12.0</version>
+        <version>1.13.0-SNAPSHOT</version>
     </parent>
     <artifactId>config</artifactId>
     <packaging>jar</packaging>
