build(deps): Upgrade OAuth2 for Spring Security
- Upgrade org.springframework.security.oauth:spring-security-oauth2
  version to 2.5.2.RELEASE

--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
         <xstream.version>1.4.19</xstream.version>
         <bouncycastle.version>1.67</bouncycastle.version>
         <commons-asic.version>0.9.3</commons-asic.version>
-        <spring-security-oath.version>2.5.1.RELEASE</spring-security-oath.version>
+        <spring-security-oauth.version>2.5.2.RELEASE</spring-security-oauth.version>
     </properties>
 
     <modules>
@@ -272,7 +272,7 @@
             <dependency>
                 <groupId>org.springframework.security.oauth</groupId>
                 <artifactId>spring-security-oauth2</artifactId>
-                <version>${spring-security-oath.version}</version>
+                <version>${spring-security-oauth.version}</version>
                 <type>jar</type>
             </dependency>
         </dependencies>
