--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.cloud.version>2021.0.5</spring.cloud.version>
-        <commons-lang.version>2.3</commons-lang.version>
+        <commons-lang.version>3.12.0</commons-lang.version>
         <xmlsec.version>2.1.7</xmlsec.version>
         <json-path.version>2.4.0</json-path.version>
         <activemq.version>5.15.9</activemq.version>
@@ -243,8 +243,8 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang.version}</version>
             </dependency>
             <dependency>
