build(deps): Override managed SnakeYAML version
- Bump org.yaml:snakeyaml version to 2.0.

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <bouncycastle.version>1.70</bouncycastle.version>
         <commons-asic.version>0.11.0</commons-asic.version>
         <spring-security-oauth.version>2.5.2.RELEASE</spring-security-oauth.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
     </properties>
 
     <modules>
@@ -244,6 +245,11 @@
                 <artifactId>spring-security-oauth2</artifactId>
                 <version>${spring-security-oauth.version}</version>
                 <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
