--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>no.difi.move-common</groupId>
         <artifactId>parent</artifactId>
-        <version>1.18.0</version>
+        <version>1.19.0-SNAPSHOT</version>
     </parent>
     <artifactId>cloud</artifactId>
     <packaging>jar</packaging>
